--- a/app/src/main/res/layout/view_reddit_post.xml
+++ b/app/src/main/res/layout/view_reddit_post.xml
@@ -6,15 +6,18 @@
 
     <ImageView
         android:id="@+id/iv_preview_image"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
         android:adjustViewBounds="true"/>
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <TextView
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -24,6 +27,7 @@
             android:layout_height="wrap_content" />
 
         <TextView
+            android:textColor="#0000FF"
             android:id="@+id/tv_from_url"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
